-- public."Shop" definition

-- Drop table

-- DROP TABLE public."Shop";

CREATE TABLE public."Shop" (
	id int4 GENERATED BY DEFAULT AS IDENTITY( INCREMENT BY 1 MINVALUE 1 MAXVALUE 2147483647 START 1 CACHE 1 NO CYCLE) NOT NULL,
	description varchar(255) NULL,
	title varchar(255) NULL,
	CONSTRAINT "Shop_pkey" PRIMARY KEY (id)
);


-- public."Warehouse" definition

-- Drop table

-- DROP TABLE public."Warehouse";

CREATE TABLE public."Warehouse" (
	id int4 GENERATED BY DEFAULT AS IDENTITY( INCREMENT BY 1 MINVALUE 1 MAXVALUE 2147483647 START 1 CACHE 1 NO CYCLE) NOT NULL,
	address varchar(255) NULL,
	CONSTRAINT "Warehouse_pkey" PRIMARY KEY (id)
);


-- public."User" definition

-- Drop table

-- DROP TABLE public."User";

CREATE TABLE public."User" (
	"birthDate" date NULL,
	id int4 GENERATED BY DEFAULT AS IDENTITY( INCREMENT BY 1 MINVALUE 1 MAXVALUE 2147483647 START 1 CACHE 1 NO CYCLE) NOT NULL,
	"isAdmin" bool NULL,
	shop_id int4 NULL,
	warehouse_id int4 NULL,
	"DTYPE" varchar(31) NOT NULL,
	"billingAddress" varchar(255) NULL,
	"cardNumber" varchar(255) NULL,
	login varchar(255) NULL,
	"name" varchar(255) NULL,
	"password" varchar(255) NULL,
	"shippingAddress" varchar(255) NULL,
	surname varchar(255) NULL,
	CONSTRAINT "User_pkey" PRIMARY KEY (id),
	CONSTRAINT "FK2m63wygyjejunjawr2f5vicid" FOREIGN KEY (shop_id) REFERENCES public."Shop"(id),
	CONSTRAINT "FKehs3bmxqyac4pjlryy7eudeag" FOREIGN KEY (warehouse_id) REFERENCES public."Warehouse"(id)
);


-- public."Cart" definition

-- Drop table

-- DROP TABLE public."Cart";

CREATE TABLE public."Cart" (
	customer_id int4 NULL,
	id int4 GENERATED BY DEFAULT AS IDENTITY( INCREMENT BY 1 MINVALUE 1 MAXVALUE 2147483647 START 1 CACHE 1 NO CYCLE) NOT NULL,
	manager_id int4 NULL,
	CONSTRAINT "Cart_pkey" PRIMARY KEY (id),
	CONSTRAINT "FK9ppk0usn74jlqusd4dxc2fh5u" FOREIGN KEY (manager_id) REFERENCES public."User"(id),
	CONSTRAINT "FKdny3cm2c3ie03va9mvid9drjr" FOREIGN KEY (customer_id) REFERENCES public."User"(id)
);


-- public."Product" definition

-- Drop table

-- DROP TABLE public."Product";

CREATE TABLE public."Product" (
	cart_id int4 NULL,
	id int4 GENERATED BY DEFAULT AS IDENTITY( INCREMENT BY 1 MINVALUE 1 MAXVALUE 2147483647 START 1 CACHE 1 NO CYCLE) NOT NULL,
	price float4 NOT NULL,
	quantity int4 NOT NULL,
	shop_id int4 NULL,
	warehouse_id int4 NULL,
	description varchar(255) NULL,
	title varchar(255) NULL,
	CONSTRAINT "Product_pkey" PRIMARY KEY (id),
	CONSTRAINT "FK9huqlgox8wqmseg52nd0t6kd2" FOREIGN KEY (cart_id) REFERENCES public."Cart"(id),
	CONSTRAINT "FKbo85e8vrmk72ujd6yo1atbtqm" FOREIGN KEY (warehouse_id) REFERENCES public."Warehouse"(id),
	CONSTRAINT "FKmrnf6ubkbldnxh3mh8wwf2f7b" FOREIGN KEY (shop_id) REFERENCES public."Shop"(id)
);


-- public."Comment" definition

-- Drop table

-- DROP TABLE public."Comment";

CREATE TABLE public."Comment" (
	"commentOwner_id" int4 NULL,
	id int4 GENERATED BY DEFAULT AS IDENTITY( INCREMENT BY 1 MINVALUE 1 MAXVALUE 2147483647 START 1 CACHE 1 NO CYCLE) NOT NULL,
	"parentComment_id" int4 NULL,
	rating float4 NOT NULL,
	"whichProductCommented_id" int4 NULL,
	"commentBody" varchar(255) NULL,
	"commentTitle" varchar(255) NULL,
	CONSTRAINT "Comment_pkey" PRIMARY KEY (id),
	CONSTRAINT "FK6p9no5puf4g8mi983isrpmwtq" FOREIGN KEY ("whichProductCommented_id") REFERENCES public."Product"(id),
	CONSTRAINT "FKhqp8s1t3voefj0pvb07ytseil" FOREIGN KEY ("parentComment_id") REFERENCES public."Comment"(id),
	CONSTRAINT "FKmvq25icouaiu0a8bu09ddesf7" FOREIGN KEY ("commentOwner_id") REFERENCES public."User"(id)
);